--- a/src/sections/blog/blog-summary/styles.module.scss
+++ b/src/sections/blog/blog-summary/styles.module.scss
@@ -27,7 +27,7 @@
 }
 
 .infoContainer {
-  @apply absolute left-[20px] top-[20px] flex items-start justify-center gap-[10px];
+  @apply absolute left-[20px] top-[20px] flex items-center justify-center gap-[10px];
 }
 
 .category {
